--- a/styles.css
+++ b/styles.css
@@ -507,10 +507,10 @@ footer .logo:hover{
 } 
 .album-covers img{
     width: 400px;
-    height: 300px;
+    height: 400px;
     background-color: #E4E4E4;
     border: 1px solid black;
-    object-fit: cover;
+    object-fit: scale-down;
 }
 .portfolio{
     color: black;
@@ -527,6 +527,7 @@ transform: scale(1.05);
 }
 .album-covers{
     padding-bottom: 60px;
+    object-fit: fill;
 }
 
 
@@ -560,8 +561,9 @@ transform: scale(1.05);
     justify-content: space-between;
     gap: 40px;
     padding-bottom: 40px;
-
-
+}
+.portfolio-page h1{
+    text-align: center;
 }
 
 .mockup-image{
